<resources>
    <string name="facebook_app_id">1700941823454094</string>

    <string name="app_name">就醫指南</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search">搜尋</string>
    <string name="edit">編輯</string>

    <string name="my_collections">我的收藏</string>
    <string name="my_reviews">我的評論</string>
    <string name="settings">設定</string>
    <string name="feedback">意見回饋</string>
    <string name="evaluate">給予評分鼓勵</string>

    <string name="your_string_here"><u>台北市立聯合醫院</u></string>
    <string name="division_underline"><u>家醫科</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="login_fail">登入失敗，請重新登入一次</string>

    <!-- search -->
    <string name="search_label">Doctors</string>
    <string name="search_hint">搜尋醫師及醫院</string>

    <!-- feedback -->
    <string name="respond_mail_address">chunyuko85@gmail.com</string>
    <string name="feedback_title">就醫指南APP:意見回饋</string>

    <!-- report -->
    <string name="report_title">就醫指南APP:資料勘誤</string>
    <string name="hospital_page">醫院資訊頁</string>
    <string name="division_page">科別資訊頁</string>
    <string name="doctor_page">醫師資訊頁</string>

    <!--Add Doctor-->
    <string name="add_doctor_title">就醫指南APP:新增醫師</string>
    <string name="add_doctor_action_bar_title">新增醫師</string>
    <string name="add_doctor_submit">送出審核</string>
    <string name="add_doctor_content">就醫指南盡力搜集全台醫院及醫生資料，希望能幫助到有需要的人。我們非常歡迎您為醫院\'新增醫師\'，一起完善醫療的資料庫，讓台灣的就醫環境能更加友善方便！！</string>
    <string name="add_doctor_name">醫師姓名</string>
    <string name="add_doctor_hospital">服務醫院</string>
    <string name="add_doctor_hospital_hint">如：大學眼科診所</string>
    <string name="add_doctor_division">服務科別</string>
    <string name="add_doctor_division_hint">如：眼科</string>
    <string name="add_doctor_specialty">醫師專長</string>
    <string name="add_doctor_specialty_hint">如：眼科、玻璃體、視網膜疾病手術及雷射治療、白內障…</string>
    <string name="add_doctor_experience">醫師經歷</string>
    <string name="add_doctor_experience_hint">如：臺北市立聯合醫院忠孝院區 [眼科]</string>

    <string name="confirm">確定</string>
    <string name="cancel">取消</string>

    <!--about us-->
    <string name="about_us_title">關於就醫指南</string>
    <string name="about_us_content">我們致力於讓每個需要就診的民眾，能找到最優質的醫生、完善健全的醫院，讓您擁有良好的就診體驗。</string>
    <string name="about_us_send_feedback">給我們意見</string>
    <string name="about_us_app_version">APP版本 1.0.3</string>

    <!--Setting-->
    <string name="setting_actionbar_title">設定</string>
    <string name="setting_about_us">關於我們</string>
    <string name="setting_sign_out">登出</string>
    <string name="setting_sign_out_success">成功登出</string>

    <!--Add Comment-->
    <string name="add_comment_title">新增評論</string>
    <string name="add_comment_division_title">科別評論</string>
    <string name="add_comment_doctor_title">醫師評論</string>
    <!-- \u0020 for a blank-->
    <string name="add_comment_date_title">就診日期\u0020\u0020</string>

    <!--Comment Detail-->
    <string name="comment_detail_info">就診資訊</string>
    <string name="comment_detail_commenter">評論人</string>
    <string name="comment_detail_comment_time">評論時間\u0020:\u0020</string>
    <string name="comment_detail_hospital">就診醫院</string>
    <string name="comment_detail_doctor">門診醫師</string>
    <string name="comment_detail_go_to_a_doctor_time">就醫時間</string>
    <string name="comment_detail_division">科別評論</string>
    <string name="comment_detail_environment">環境衛生</string>
    <string name="comment_detail_equipment">醫療設備</string>
    <string name="comment_detail_division_specialty">醫護專業</string>
    <string name="comment_detail_division_friend">服務態度</string>
    <string name="comment_detail_doctor_comment">醫師評論</string>
    <string name="comment_detail_award">已推薦</string>
    <string name="comment_detail_doctor_friend">醫師態度</string>
    <string name="comment_detail_doctor_specialty">醫師專業</string>

    <!--Feedback-->
    <string name="feedback_content">我們非常重視您寶貴的意見，\n有您的建議，我們會做的更好！</string>
    <string name="feedback_subject">主旨</string>
    <string name="feedback_subject_hint">請輸入主旨</string>
    <string name="feedback_opinion">意見</string>
    <string name="feedback_opinion_hint">請輸入您的改進建議</string>
    <string name="feedback_submit">送 出</string>

    <!--Problem report-->
    <string name="problem_report_thanks_user">非常感謝您使用就醫指南，若系統錯誤造成您使用上的不便，我們深感抱歉！我們會盡快修正，感謝您的回報！！</string>
    <string name="problem_report_page">勘誤位置</string>
    <string name="problem_report_content">勘誤內容</string>
    <string name="problem_report_content_hint">具體描述</string>
    <string name="problem_report_submit">送出</string>

    <!--Searchable-->
    <string name="searchable_doctor">醫師</string>
    <string name="searchable_hospital">醫院</string>

    <!--Area-->
    <string name="area_download_hospital">醫院資料下載中</string>
    <string name="area_spinner_area_title">地區:</string>

    <!--No score-->
    <string name="no_score">尚無評分資料！</string>
    <string name="no_score_content">歡迎您為就醫指南新增評分資料，您寶貴的意見能讓台灣的醫療品質變得更好！！</string>
    <string name="for_add_score">以新增評分！</string>

    <!--No comment-->
    <string name="no_comment">尚無評論資料！</string>
    <string name="no_comment_content">歡迎您為就醫指南新增評論資料，您寶貴的意見能讓台灣的醫療品質變得更好！！</string>

    <!--No Doctor-->
    <string name="no_doctor">尚無醫師資料！</string>
    <string name="no_doctor_content">歡迎您為就醫指南新增醫師資料，您寶貴的意見能讓台灣的醫療品質變得更好！！</string>
    <string name="for_add_doctor">以新增醫師！</string>

    <!--My Comment-->
    <string name="my_comment_no_comment">您目前尚未評論！</string>
    <string name="my_comment_no_comment_content">歡迎您至科別、醫師資訊頁分享您的就醫體驗，您寶貴的意見能讓台灣的醫療品質變得更好！！</string>

    <!--Common-->
    <string name="click">點選</string>
    <string name="for_add_comment">以新增評論！</string>
    <string name="menu_title_share">分享</string>
    <string name="menu_title_report_problem">問題回報</string>

</resources>
