<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none"
        android:id="@+id/account_menu">
        <item
            android:id="@+id/my_collections"
            android:icon="@mipmap/nav_heart"
            android:title="@string/my_collections" />
        <item
            android:id="@+id/my_comments"
            android:icon="@mipmap/nav_comment"
            android:title="@string/my_reviews" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/other_menu">
        <item
            android:id="@+id/setting"
            android:icon="@mipmap/nav_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/feedback"
            android:icon="@mipmap/nav_report"
            android:title="@string/feedback" />
        <item
            android:id="@+id/play_store"
            android:icon="@mipmap/nav_star"
            android:title="@string/evaluate" />
    </group>

</menu>
