<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kosbrother.com.doctorguide.FeedbackActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/appicon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:src="@mipmap/ic_aboutus_logo" />

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appicon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/black_text"
            android:textSize="@dimen/doctor_fragment_link_text_size" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appname"
            android:layout_centerHorizontal="true"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/feedback_content" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginTop="12dp"
            android:text="@string/feedback_subject"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/doctor_fragment_text_size" />

        <EditText
            android:id="@+id/feedback_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:hint="@string/feedback_subject_hint" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_title"
            android:layout_marginTop="12dp"
            android:text="@string/feedback_opinion"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/doctor_fragment_text_size" />

        <EditText
            android:id="@+id/feedback_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:hint="@string/feedback_opinion_hint" />
    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/primary_color_button"
        android:text="@string/feedback_submit"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/doctor_fragment_text_size" />

</RelativeLayout>
