<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light_background"
    android:orientation="vertical"
    tools:context="kosbrother.com.doctorguide.AddDoctorActivity">

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/primary_color_button"
        android:onClick="onSubmitButtonClick"
        android:text="@string/add_doctor_submit"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/doctor_fragment_text_size" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="500dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_add_doctor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/add_doctor_content"
                    android:textColor="@color/grey_text_color"
                    android:textSize="@dimen/comment_score_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_doctor_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/doctor_fragment_title_size" />

                    <EditText
                        android:id="@+id/doctor_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:textSize="@dimen/doctor_fragment_title_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_doctor_hospital"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/doctor_fragment_title_size" />

                    <EditText
                        android:id="@+id/hospial_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:hint="@string/add_doctor_hospital_hint"
                        android:textSize="@dimen/doctor_fragment_title_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_doctor_division"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/doctor_fragment_title_size" />

                    <EditText
                        android:id="@+id/division_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:hint="@string/add_doctor_division_hint"
                        android:textSize="@dimen/doctor_fragment_title_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_doctor_specialty"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/doctor_fragment_title_size" />

                    <EditText
                        android:id="@+id/doctor_spe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:hint="@string/add_doctor_specialty_hint"
                        android:textSize="@dimen/doctor_fragment_title_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_doctor_experience"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/doctor_fragment_title_size" />

                    <EditText
                        android:id="@+id/doctor_exp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:hint="@string/add_doctor_experience_hint"
                        android:textSize="@dimen/doctor_fragment_title_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
