<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kosbrother.com.doctorguide.ProblemReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:maxHeight="500dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_aboutus_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/problem_report_thanks_user"
                android:textColor="@color/grey_text_color"
                android:textSize="@dimen/comment_score_size" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/problem_report_page"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/doctor_fragment_text_size" />

        <TextView
            android:id="@+id/report_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/doctor_fragment_title_size"
            tools:text="醫師資訊頁" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/report_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_text"
                android:textSize="@dimen/doctor_fragment_title_size"
                tools:text="台北市立聯合醫院 ｜家醫科" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/problem_report_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/doctor_fragment_text_size" />

        <EditText
            android:id="@+id/report_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/problem_report_content_hint"
            android:textSize="@dimen/doctor_fragment_title_size" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:onClick="onReportSubmitButtonClick"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/primary_color_button"
        android:text="@string/problem_report_submit"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/doctor_fragment_text_size" />
</RelativeLayout>
